--- a/image-analysis.csproj
+++ b/image-analysis.csproj
@@ -12,6 +12,9 @@
     <Content Include="input\**">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="TestURLs.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
