--- a/image-analysis.csproj
+++ b/image-analysis.csproj
@@ -15,6 +15,9 @@
     <Content Include="TestURLs.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Outro.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
